added story images and blurb, added toggle menu with js

--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 
 <body>
 	<header>
-		<h1>Chapter Zero</h1>
 
-		<nav>
-			<ul class="left-nav">
-				<li>Read</li>
-				<li>Community</li>
-				<li>Writing Tips</li>
-			</ul>
+		<div class="hamburger-head">
+			<h1>Chapter Zero</h1>
+	        <nav>
+	        	<a href="#" class="menu-button nodesk" onclick="toggle_visibility('menu');">MENU</a>
+	        	<div class="dropdown" id="menu">
+		            <ul>
+		                <li>Read</li>
+		                <li>Community</li>
+		                <li>Writing Tips</li>
+		            </ul>
+	            </div>
+	        </nav>
+	    </div>
 
-			<div class="search-box">Search stories, tags, characters, and authors</div>
-			
-			<ul class="right-nav">
-				<li>Write a Story</li>
-				<li>Sign In</li>
-			</ul>
-		</nav>
+		<div class="search-box"><span>Search stories, tags, characters, and authors</span></div>
+		
+		<ul class="right-nav">
+			<li>Write a Story</li>
+			<li>Sign In</li>
+		</ul>
 
 	</header>
 
@@ -46,53 +51,175 @@
 			<li>NEW</li>
 			<li>POPULAR</li>
 		</ul>	
-		<div class="search-box-2">Search stories, tags, characters, and authors</div>
+		<div class="search-box-2"><span>Search stories, tags, characters, and authors</span></div>
 
 		<div class="cover-art">
+
 			<div class="cover">
 				<img src="images/angel.jpg">
 				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
 					<h3>Happy Is The Heart That Still Feels Pain</h3>
-					<h5>BUFFY THE VAMPIRE SLAYER</h4>
-					<h4>ang3l4life</h4>
-					<h4>15,678</h4>
+					<h5>ANGEL</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
 				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/bob.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>BOB'S BURGERS</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/bsg.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>BATTLESTAR GALACTICA</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/buffy.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>BUFFY THE VAMPIRE SLAYER</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/dollhouse.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>DOLLHOUSE</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/firefly.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>FIREFLY</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/fringe.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>FRINGE</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/harry.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>HARRY POTTER</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/serenity.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>SERENITY</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/supernatural.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>SUPERNATURAL</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
+
 			<div class="cover">
 				<img src="images/svu.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<h6>TV</h6>
+					<h3>Happy Is The Heart That Still Feels Pain</h3>
+					<h5>LAW AND ORDER : SVU</h5>
+					<div class="sub-info">
+						<h4>ang3l4life</h4>
+						<h4>15,678</h4>
+					</div>	
+				</div>
 			</div>
-		</div>	
 
+		</div>	
 		
 	</section>
 
+	<script type="text/javascript">function toggle_visibility(id) {
+	var e = document.getElementById(id);
+	if(e.style.display == 'block')
+	e.style.display = 'none';
+	else
+	e.style.display = 'block';
+	}
+	</script>
 </body>
 </html>
