added links to nav items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	    <nav>
             <ul>
-        		<li onclick="toggleVisibility('.dropdown');">Read&nbsp<img class="arrow" src="images/arrow-down.svg">
+        		<li onclick="toggleVisibility('.dropdown');"><a href="#">Read</a>&nbsp<img class="arrow" src="images/arrow-down.svg">
 					<ul class="dropdown">
 						<li class="col-1"><a href="#">Anime</a></li>
 						<li class="col-1"><a href="#">Books</a></li>
@@ -32,8 +32,8 @@
 						<li class="col-3"><a href="#">Crossovers</a></li>
 					</ul>
         		</li>
-                <li>Community</li>
-                <li>Writing Tips</li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Writing Tips</a></li>
             </ul>
 
 			<input type="text" class="search-box" placeholder="Search stories, tags, characters, and authors"</>
