resized all images

--- a/index.html
+++ b/index.html
@@ -12,44 +12,57 @@
 </head>
 
 <body>
+
 	<header>
-
-	    <h1>Chapter Zero</h1>
-	    <div class="horiz-line-mobile"></div>
-
-	    <nav>
+	    <nav class="mobile-nav">
             <ul>
-        		<li onclick="toggleVisibility('.dropdown');"><a href="#">Read</a>&nbsp<img class="arrow" src="images/arrow-down.svg">
+        		<li onclick="toggleVisibility('.dropdown');"><a href="#"><img class="menu" src="images/menu.svg"></a>
 					<ul class="dropdown">
-						<li class="col-1"><a href="#">Anime</a></li>
-						<li class="col-1"><a href="#">Books</a></li>
-						<li class="col-1"><a href="#">Cartoons</a></li>
-						<li class="col-2"><a href="#">Comics</a></li>
-						<li class="col-2"><a href="#">Games</a></li>
-						<li class="col-2"><a href="#">Movies</a></li>
-						<li class="col-3"><a href="#">Theater</a></li>
-						<li class="col-3"><a href="#">Television</a></li>
-						<li class="col-3"><a href="#">Crossovers</a></li>
+						<li><a href="#">Anime</a></li>
+						<li><a href="#">Books</a></li>
+						<li><a href="#">Cartoons</a></li>
+						<li><a href="#">Comics</a></li>
+						<li><a href="#">Games</a></li>
+						<li><a href="#">Movies</a></li>
+						<li><a href="#">Theater</a></li>
+						<li><a href="#">Television</a></li>
+						<li><a href="#">Crossovers</a></li>
 					</ul>
         		</li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Writing Tips</a></li>
-            </ul>
-
-			<input type="text" class="search-box" placeholder="Search stories, tags, characters, and authors"</>
-			
-			<ul>
-				<li><a href="#">Write a Story</a></li>
-				<li><a href="#">Sign In / Sign Up</a></li>
-			</ul>
-		</nav>
-
+        	</ul>	
+	    	<h1>Chapter Zero</h1>
+	    	<p><a href="#">SUBSCRIBE</a></p>
+	    </nav>
 	</header>
 
+	<nav class="desktop-nav">
+	    	<h1>Chapter Zero</h1>
+	    	<div class="subscribe">
+	    		<p><a href="#">SUBSCRIBE</a></p>
+	    	</div>
+	    	<ul>
+	    		<li><a href="#">ANIME</a></li>
+				<li><a href="#">BOOKS</a></li>
+				<li><a href="#">CARTOONS</a></li>
+				<li><a href="#">COMICS</a></li>
+				<li><a href="#">GAMES</a></li>
+				<li><a href="#">MOVIES</a></li>
+				<li><a href="#">THEATER</a></li>
+				<li><a href="#">TELEVISION</a></li>
+				<li><a href="#">CROSSOVERS</a></li>
+			</ul>	
+	    </nav>
+
 	<section class="intro">
-		<p>Chapter Zero is a free community for fans who love reading and writing about their favorite characters in original storylines. Enter the world of the supernatural, meet new characters inside of old stories, and share your own stories with fellow fans. There is a place for everyone here, where the story never ends.</p>
-		<button><a href="#">Start Reading</a></button>
-		<button><a href="#">Write a Story</a></button>
+		<p>Chapter Zero is a curated site for the best of the best in fan-fiction. This is a place for readers to enjoy new stories based around their favorite characters. Our team of avid fan-fiction readers select the most interesting and original stories every week. Find out how to get your story published <a href="#">here.</a></p>
+		<div class="social-icons">
+			<img src="images/facebook.svg">
+			<img src="images/twitter.svg">
+			<img src="images/pinterest.svg">
+			<img src="images/instagram.svg">
+		</div>
+		<!-- <button><a href="#">Start Reading</a></button>
+		<button><a href="#">Write a Story</a></button> -->
 	</section>
 
 	<img class="ad" src="images/banner.jpg">
@@ -68,7 +81,7 @@
 		<div class="cover-art">
 
 			<div class="cover">
-				<img class="cover-img" src="images/angel.jpg">
+				<img class="cover-img" src="images/angel-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -83,7 +96,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/buffy.jpg">
+				<img class="cover-img" src="images/buffy-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -98,7 +111,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/dollhouse.jpg">
+				<img class="cover-img" src="images/dollhouse-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -113,7 +126,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/firefly.jpg">
+				<img class="cover-img" src="images/firefly-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -128,7 +141,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/bsg.jpg">
+				<img class="cover-img" src="images/bsg-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -143,7 +156,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/fringe.jpg">
+				<img class="cover-img" src="images/fringe-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -158,7 +171,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/titanic.jpg">
+				<img class="cover-img" src="images/titanic-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<h6>FILM</h6>
@@ -173,7 +186,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/bob.jpg">
+				<img class="cover-img" src="images/bob-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -188,7 +201,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/harry.jpg">
+				<img class="cover-img" src="images/harry-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/book.svg">
 					<h6>BOOK</h6>
@@ -203,7 +216,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/serenity.jpg">
+				<img class="cover-img" src="images/serenity-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
 					<h6>FILM</h6>
@@ -218,7 +231,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/supernatural.jpg">
+				<img class="cover-img" src="images/supernatural-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
@@ -233,7 +246,7 @@
 			</div>
 
 			<div class="cover">
-				<img class="cover-img" src="images/svu.jpg">
+				<img class="cover-img" src="images/svu-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
 					<h6>TV</h6>
