way too long without a push

--- a/index.html
+++ b/index.html
@@ -30,28 +30,26 @@
 					</ul>
         		</li>
         	</ul>	
-	    	<h1>Chapter Zero</h1>
-	    	<p><a href="#">SUBSCRIBE</a></p>
+	    	<h1>&nbspChapter Zero</h1>
+    		<button>SUBSCRIBE</button>
 	    </nav>
 	</header>
 
 	<nav class="desktop-nav">
-	    	<h1>Chapter Zero</h1>
-	    	<div class="subscribe">
-	    		<p><a href="#">SUBSCRIBE</a></p>
-	    	</div>
-	    	<ul>
-	    		<li><a href="#">ANIME</a></li>
-				<li><a href="#">BOOKS</a></li>
-				<li><a href="#">CARTOONS</a></li>
-				<li><a href="#">COMICS</a></li>
-				<li><a href="#">GAMES</a></li>
-				<li><a href="#">MOVIES</a></li>
-				<li><a href="#">THEATER</a></li>
-				<li><a href="#">TELEVISION</a></li>
-				<li><a href="#">CROSSOVERS</a></li>
-			</ul>	
-	    </nav>
+    	<h1>Chapter Zero</h1>
+    	<button>SUBSCRIBE</button>
+    	<ul>
+    		<li><a href="#">ANIME</a></li>
+			<li><a href="#">BOOKS</a></li>
+			<li><a href="#">CARTOONS</a></li>
+			<li><a href="#">COMICS</a></li>
+			<li><a href="#">GAMES</a></li>
+			<li><a href="#">MOVIES</a></li>
+			<li><a href="#">THEATER</a></li>
+			<li><a href="#">TELEVISION</a></li>
+			<li><a href="#">CROSSOVERS</a></li>
+		</ul>	
+    </nav>
 
 	<section class="intro">
 		<p>Chapter Zero is a curated site for the best of the best in fan-fiction. This is a place for readers to enjoy new stories based around their favorite characters. Our team of avid fan-fiction readers select the most interesting and original stories every week. Find out how to get your story published <a href="#">here.</a></p>
@@ -61,52 +59,51 @@
 			<img src="images/pinterest.svg">
 			<img src="images/instagram.svg">
 		</div>
-		<!-- <button><a href="#">Start Reading</a></button>
-		<button><a href="#">Write a Story</a></button> -->
 	</section>
 
 	<img class="ad" src="images/banner.jpg">
 	
 	<section class="stories">
 
-		<ul>
-			<a href="#"><li>NEW</li></a>
-			<a href="#"><li>POPULAR</li></a>
-		</ul>
-
-		<input type="text" class="search-box-2" placeholder="Search stories, tags, characters, and authors"</>
-
-		<div class="clear-fix"></div>
-
 		<div class="cover-art">
-
-			<div class="cover">
-				<img class="cover-img" src="images/angel-2.jpg">
-				<div class="blurb">
-					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
-					<br>
-					<h3>Happy Hearts Feel Pain</h3>
-					<h5>ANGEL</h5>
-					<div class="sub-info">
-						<h4>ang3l4life</h4>
-						<h4><img src="images/eye.svg">&nbsp15,678</h4>
-					</div>	
-				</div>
-			</div>
 
 			<div class="cover">
 				<img class="cover-img" src="images/buffy-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>She's Out Of Her Mind</h3>
 					<h5>BUFFY THE VAMPIRE SLAYER</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>BeneficialAddiction</h4>
-						<h4><img src="images/eye.svg">&nbsp975</h4>
-					</div>	
+					</div> -->	
+				</div>
+			</div>
+
+			<div class="cover">
+				<img class="cover-img" src="images/angel-2.jpg">
+				<div class="blurb">
+					<img class="icon" src="images/tv.svg">
+					<p>TV</p>
+					<br>
+					<h3>Only Happy Hearts Feel Pain</h3>
+					<h5>ANGEL</h5>
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
+						<h4>ang3l4life</h4>
+					</div> -->	
+				</div>
+			</div>
+
+			<div class="cover quote">
+				<img src="images/quotes.svg">
+				<p>Was this what the stars meant, Dru? That I would fade, burn up from the inside out til there was nothing left but ash?&rdquo;</p>
+				<div class="credits">
+					<h3><a href="#">&mdash;She's Out Of Her Mind</a></h3>
+					<h4><a href="#">by BeneficialAddiction</a></h4>
+					<h4>BUFFY THE VAMPIRE SLAYER</h4>
 				</div>
 			</div>
 
@@ -114,14 +111,14 @@
 				<img class="cover-img" src="images/dollhouse-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>A Day In The Life Of Echo</h3>
 					<h5>DOLLHOUSE</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>sunnydalesis</h4>
-						<h4><img src="images/eye.svg">&nbsp7,567</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -129,14 +126,14 @@
 				<img class="cover-img" src="images/firefly-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>Strange Bedfellows</h3>
 					<h5>FIREFLY</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>Selective SciFi Junkie</h4>
-						<h4><img src="images/eye.svg">&nbsp1,852</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -144,29 +141,36 @@
 				<img class="cover-img" src="images/bsg-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>Changing Rooms</h3>
 					<h5>BATTLESTAR GALACTICA</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>Aussiegirl41</h4>
-						<h4><img src="images/eye.svg">&nbsp1,858</h4>
-					</div>	
+					</div> -->	
 				</div>
+			</div>
+
+			<div class="cover authors">
+				<h2>Author Highlight</h2>
+				<img src="images/bex.jpg">
+				<h4>Eva Tallahassee</h4>
+				<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<img class="more" src="images/arrow.svg"></p>
 			</div>
 
 			<div class="cover">
 				<img class="cover-img" src="images/fringe-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
-					<h3>Our Bodies, Possessed By Light</h3>
+					<h3>Our Bodies In Light</h3>
 					<h5>FRINGE</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>alternatedunham</h4>
-						<h4><img src="images/eye.svg">&nbsp3,782</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -174,14 +178,14 @@
 				<img class="cover-img" src="images/titanic-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
-					<h6>FILM</h6>
+					<p>FILM</p>
 					<br>
 					<h3>The Unsinkable Ship</h3>
 					<h5>TITANIC</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>leo4eva</h4>
-						<h4><img src="images/eye.svg">&nbsp1,658</h4>
-					</div>	
+					</div>	 -->
 				</div>
 			</div>
 
@@ -189,14 +193,14 @@
 				<img class="cover-img" src="images/bob-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>Stuck In Detention With You</h3>
 					<h5>BOB'S BURGERS</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>christian95</h4>
-						<h4><img src="images/eye.svg">&nbsp12,488</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -204,14 +208,14 @@
 				<img class="cover-img" src="images/harry-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/book.svg">
-					<h6>BOOK</h6>
+					<p>BOOK</p>
 					<br>
 					<h3>Catch Me If You Can</h3>
 					<h5>HARRY POTTER</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>seeker216</h4>
-						<h4><img src="images/eye.svg">&nbsp8,320</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -219,14 +223,14 @@
 				<img class="cover-img" src="images/serenity-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
-					<h6>FILM</h6>
+					<p>FILM</p>
 					<br>
 					<h3>New Friends</h3>
 					<h5>SERENITY</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>AlwayzHuman</h4>
-						<h4><img src="images/eye.svg">&nbsp4,789</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -234,14 +238,14 @@
 				<img class="cover-img" src="images/supernatural-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>Locking Horns</h3>
 					<h5>SUPERNATURAL</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>celinaville</h4>
-						<h4><img src="images/eye.svg">&nbsp542</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
@@ -249,20 +253,35 @@
 				<img class="cover-img" src="images/svu-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
-					<h6>TV</h6>
+					<p>TV</p>
 					<br>
 					<h3>Missing Mother</h3>
 					<h5>LAW AND ORDER : SVU</h5>
-					<div class="sub-info">
+					<img class="more" src="images/arrow.svg">
+					<!-- <div class="sub-info">
 						<h4>melted by shadows</h4>
-						<h4><img src="images/eye.svg">&nbsp264</h4>
-					</div>	
+					</div> -->	
 				</div>
 			</div>
 
 		</div>	
 		
 	</section>
+
+	<footer>
+		<div class="social-icons">
+			<img src="images/facebook.svg">
+			<img src="images/twitter.svg">
+			<img src="images/pinterest.svg">
+			<img src="images/instagram.svg">
+		</div>
+		<p>Subscribe and never miss an issue!</p>
+		<input class="email" type="text" placeholder="Email"></input>
+		<input class="submit" type="submit">
+		<a href="#"><h5>Become an Author</h5></a>
+		<a href="#"><h5>Terms and Conditions</h5></a>
+		<h5>&copy; 2016 Chapter Zero</h5>
+	</footer>
 
 	<script type="text/javascript">function toggleVisibility(target) {
 		var e = document.querySelector(target);
