fixed grid layout of cards, got rid of pesky max width

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 		<div class="cover-art">
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/buffy-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/angel-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -107,7 +107,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/dollhouse-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/firefly-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -137,7 +137,14 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover authors">
+				<h2>Author Highlight</h2>
+				<img src="images/bex.jpg">
+				<h4>Eva Tallahassee</h4>
+				<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<img class="more" src="images/arrow.svg"></p>
+			</div>
+
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/bsg-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -152,14 +159,7 @@
 				</div>
 			</div>
 
-			<div class="cover authors">
-				<h2>Author Highlight</h2>
-				<img src="images/bex.jpg">
-				<h4>Eva Tallahassee</h4>
-				<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<img class="more" src="images/arrow.svg"></p>
-			</div>
-
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/fringe-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -174,7 +174,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/titanic-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
@@ -189,7 +189,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/bob-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -204,7 +204,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/harry-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/book.svg">
@@ -219,7 +219,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/serenity-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/film.svg">
@@ -234,7 +234,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/supernatural-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
@@ -249,7 +249,7 @@
 				</div>
 			</div>
 
-			<div class="cover">
+			<div class="cover cover-max">
 				<img class="cover-img" src="images/svu-2.jpg">
 				<div class="blurb">
 					<img class="icon" src="images/tv.svg">
