fixed media query at 800px

--- a/index.html
+++ b/index.html
@@ -139,9 +139,15 @@
 
 			<div class="cover authors">
 				<h2>Author Highlight</h2>
-				<img src="images/bex.jpg">
-				<h4>Eva Tallahassee</h4>
-				<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.<img class="more" src="images/arrow.svg"></p>
+				<div class="author-pic">
+					<img src="images/bex.png">
+					<h4>Eva Tallahassee</h4>
+				</div>
+				<div class="interview">
+					<p>Eva, author of <span><a href="#">Everyone Is Doing It,</a></span> dishes about breakfast with Daniel Radcliff and that time she got to dance with Patrick Swayze.</p>
+				</div>
+				<div class="clear-fix"></div>
+				<img class="more" src="images/arrow.svg">
 			</div>
 
 			<div class="cover cover-max">
